<resources>
    <string name="app_name">WeChat-App</string>
    <string name="lbl_text_your_friends_and_share_moments">Text your friends and share moments</string>
    <string name="lbl_end_to_end_secured_messaging_app_with_social_elements">End-to-end secured messaging app with Social Elements</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_welcome">Welcome !</string>
    <string name="lbl_login_to_continue">Login to continue</string>
    <string name="lbl_enter_your_phone_number">Enter Your Phone Number</string>
    <string name="lbl_enter_your_password">Enter Your Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_hi">Hi !</string>
    <string name="lbl_create_a_new_account">Create a new account</string>
    <string name="lbl_dont_receive_the_otp">Dont receive the OTP?</string>
    <string name="bl_resend_code">Resend Code</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_agree_to">Agree To</string>
    <string name="lbl_term_and_service">Term And Service</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_moment">Moment</string>
    <string name="lbl_chat">Chat</string>
    <string name="lbl_contacts">Contacts</string>
    <string name="lbl_me">Me</string>
    <string name="lbl_setting">Setting</string>

    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bl_setup_profile_picture">Setup Profile Picture</string>
    <string name="lbl_tap_to_change_profile_picture">Tap to Change Profile Picture</string>
    <string name="bl_continue">Continue</string>
    <string name="lbl_new_moment">New Moment</string>
    <string name="lbl_create">Create</string>
    <string name="lbl_what_is_on_your_mind">What\'s on your mind?</string>
    <string name="lbl_moments">Moments</string>
    <string name="lbl_chats">Chats</string>
    <string name="lbl_active_now">Active Now</string>
    <string name="lbl_bookmarked_moments">Bookmarked Moments</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="lbl_new_group">New Group</string>
    <string name="lbl_group_name">Group Name</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_logout">Logout</string>

</resources>