<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/based_white"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLoginBack"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        app:srcCompat="@drawable/ic_back_arrow"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLoginWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLoginBack"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/lbl_welcome"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLoginContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLoginWelcome"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/lbl_login_to_continue"
        android:textColor="@color/grey99"
        android:textSize="@dimen/text_regular_2x" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLoginIllustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLoginContinue"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_xxlarge"
        app:srcCompat="@drawable/ic_login_illustration" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLoginPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_below="@id/ivLoginIllustration"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:textColorHint="@color/grey99"
        android:hint="@string/lbl_enter_your_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLoginPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/based_white"
            android:inputType="phone"
            android:paddingTop="@dimen/margin_xlarge"
            android:paddingBottom="@dimen/margin_small"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_below="@id/textFieldLoginPhoneNumber"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:textColorHint="@color/grey99"
        android:hint="@string/lbl_enter_your_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@color/based_white"
            android:paddingTop="@dimen/margin_xlarge"
            android:paddingBottom="@dimen/margin_small"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLoginForgerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFieldLoginPassword"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/text_small" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@id/tvLoginForgerPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:background="@drawable/background_filled_button"
        android:text="@string/lbl_login"
        android:alpha="0.5"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />




</RelativeLayout>