<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/based_white"
    tools:context=".activities.GreetingActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintBottom_toTopOf="@+id/layoutGreeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_text_your_friends_and_share_moments"
            android:textAlignment="center"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_end_to_end_secured_messaging_app_with_social_elements"
            android:layout_marginTop="@dimen/margin_medium"
            android:textAlignment="center"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/text_small"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginHorizontal="@dimen/margin_xxlarge"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGreetingRegister"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/background_outline_button"
                android:text="@string/lbl_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/primary_color"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/margin_medium_3"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnGreetingLogin"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/background_filled_button"
                android:text="@string/lbl_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>




    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>