<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/based_white"
    tools:context=".activities.OtpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivOtpBack"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        app:srcCompat="@drawable/ic_back_arrow"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOtpGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivOtpBack"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/lbl_hi"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOtpCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOtpGreeting"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/lbl_create_a_new_account"
        android:textColor="@color/grey99"
        android:textSize="@dimen/text_regular_2x" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivOtpIllustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOtpCreateAccount"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_large"
        app:srcCompat="@drawable/ic_otp_illustration" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldOtpPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivOtpIllustration"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_toStartOf="@id/btnGetOtp"
            android:layout_alignParentStart="true"
            android:hint="@string/lbl_enter_your_phone_number"
            android:textColorHint="@color/grey99">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtOtpPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/based_white"
                android:inputType="phone"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/margin_xlarge"
                android:paddingEnd="0dp"
                android:paddingBottom="@dimen/margin_small"

                />

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnGetOtp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/textFieldOtpPhoneNumber"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:background="@drawable/background_filled_button"
        android:text="Get OTP"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <com.chaos.view.PinView
        android:id="@+id/pinOtp"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFieldOtpPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="@drawable/shadow_otp_2"
        android:textColor="@color/primary_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="@color/primary_color"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="false"
        app:itemCount="4"
        app:itemHeight="65dp"
        app:itemRadius="4dp"
        app:itemSpacing="@dimen/margin_small"
        app:itemWidth="60dp"
        app:lineColor="@android:color/transparent"
        app:viewType="rectangle" />

    <LinearLayout
        android:id="@+id/layoutResendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pinOtp"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_dont_receive_the_otp"
            android:textColor="@color/grey99"
            android:textSize="@dimen/text_regular" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLoginContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:text="@string/bl_resend_code"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/text_regular" />

    </LinearLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@id/layoutResendCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/background_filled_button"
        android:text="@string/lbl_verify"
        android:alpha="0.5"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>