<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/based_white"
    tools:context=".activities.SetUpProfileActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivRegisterBack"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        app:srcCompat="@drawable/ic_back_arrow" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSetUpProfileGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivRegisterBack"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/lbl_hi"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSetUpProfileDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSetUpProfileGreeting"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/bl_setup_profile_picture"
        android:textColor="@color/grey99"
        android:textSize="@dimen/text_regular_2x" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:srcCompat="@drawable/avatar1" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfileAdd"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@color/based_white"
        android:layout_alignBottom="@id/ivProfile"
        android:layout_alignEnd="@id/ivProfile"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:srcCompat="@drawable/ic_add" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSetUpProfileRemind"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfile"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/lbl_tap_to_change_profile_picture"
        android:textColor="@color/grey99"
        android:textSize="@dimen/text_regular_2x" />


    <Button
        android:id="@+id/btnUploadProfile"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/background_filled_button"
        android:text="@string/bl_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />





</RelativeLayout>